# cddd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Order State Chart.drawio  README.md  biicode.conf  conan_provider.cmake  conandata.yml  conanfile.py  create_makefiles.sh  software.mk
application/unit_tests/: CMakeLists.txt  software.mk
application/unit_tests/cqrs/: artifact_store_test.cpp  artifact_test.cpp  event_dispatcher_test.cpp
application/unit_tests/messaging/: dispatcher_test.cpp  router_test.cpp
cqrs/: CMakeLists.txt  aggregate.cpp  aggregate.h  artifact.h  artifact_store.h  artifact_traits.h  artifact_view.h  command.h  command_handler.h  command_validator.h  commit.h  continuation_context.h  copy_on_write.h  cqrs.cpp  default_event_dispatcher.h  domain_event.h  domain_event_stream_store.h  event.h  event_container.h  event_dispatcher.h  event_source.h  event_source_repository.h  event_store.h  event_stream.h  exceptions.h  function_traits.h  generic_command_handler.h  memento_store.h  null_store.h  object_id.cpp  object_id.h  pointer_traits.h  repository.h  simple_artifact_factory.h  software.mk  source.h  store.h  stream.h  table.h  traits.h
cqrs/fakes/: fake_artifact.h  fake_dispatcher.h  fake_event.h  fake_event_source.h  fake_event_store.h  fake_event_stream.h  fake_object_id_generator.h  fake_source.h  fake_stream.h
cqrs/test/fakes/: fake_artifact.h  fake_dispatcher.h  fake_event.h  fake_event_source.h  fake_event_store.h  fake_event_stream.h  fake_object_id_generator.h
cqrs/test/unit/: artifact_store_test.cpp  artifact_test.cpp  artifact_tests.h  copy_on_write_test.cpp  event_dispatcher_test.cpp  event_source_repository_test.cpp  object_id_test.cpp  software.mk
file_journal/: CMakeLists.txt
file_journal/main/skizzay/file/: event_log.h  event_log_provider.h  event_source.h  event_stream.h
file_journal/test/file/: event_log.t.cpp  event_source.t.cpp  event_stream.t.cpp
gtd/: CMakeLists.txt
gtd/main/business/: io_utils.h
gtd/main/business/model/project/: project.cpp  project.h
gtd/main/business/model/project/commands/: add_task_to_project.h  cancel_project.h  create_project.h  mark_project_task_as_completed.h  reactivate_task_within_project.h  remove_task_from_project.h
gtd/main/business/model/project/events/: project_added_task.h  project_completed.h  project_created.h  project_event.h  project_reactivated.h  project_removed_task.h  project_task_completed.h  project_task_reactivated.h
gtd/test/business/model/project/: command_processing.t.cpp
s11n/: CMakeLists.txt
s11n/main/skizzay/s11n/: binary_reader.h  binary_writer.h  boolean.h  buffer_position.h  buffer_reader.h  decode.h  encode.h  end_of_file_error.h  file.h  file_descriptor.h  file_deser.h  io_device.h  memmap_handle.h  memory_buffer.h  memory_map.h  range_of_bytes.h  seek_origin.h  sink.h  source.h  throw_system_error.h  write_transaction.h
s11n/test/s11n/: binary_serialization.t.cpp  buffer_reader.t.cpp  encode.t.cpp  file.t.cpp  file_deser.t.cpp  memmap_handle.t.cpp  memory_buffer.t.cpp  memory_map.t.cpp
simple/: CMakeLists.txt
simple/main/skizzay/: aggregate_root.h  aggregate_root_factory.h  command.h  command_handler.h  memory_event_store.h  state.h  state_machine.h  tag.h  uuid.h
simple/main/skizzay/cqrs/: aggregate_root.h  command.h  event.h  event_source.h  event_stream.h  exceptions.h  factory.h  memory_event_store.h  simple_traits.h  state.h  state_machine.h  time_point.h  type_sequence.h  uuid.h
simple/test/: aggregate_root.t.cpp  aggregate_root_factory.t.cpp  command.t.cpp  command_handler.t.cpp  event.t.cpp  memory_event_store.t.cpp  state_machine.t.cpp  time_point.t.cpp  uuid.t.cpp
simple/test/cqrs/: aggregate_root.t.cpp  aggregate_root_factory.t.cpp  command.t.cpp  command_handler.t.cpp  event.t.cpp  memory_event_store.t.cpp  state_machine.t.cpp  time_point.t.cpp  uuid.t.cpp
src/main/cpp/: CMakeLists.txt  stack_ptr.h
src/main/cpp/skizzay/cddd/: aggregate_root.h  boolean.h  commit_failed.h  concurrent_repository.h  dereference.h  dictionary.h  domain_event.h  domain_event_sequence.h  domain_event_visitor.h  domain_event_wrapper.h  event_sourced.h  event_sourced_aggregate_provider.h  event_sourced_aggregate_repository.h  event_store.h  event_stream.h  event_stream_buffer.h  factory.h  finally.h  history_load_failed.h  identifier.h  in_memory_event_store.h  key_not_found.h  narrow_cast.h  nonvoid.h  nullable.h  optimistic_concurrency_collision.h  repository.h  sourced_aggregate_factory.h  timestamp.h  type_sequence.h  value.h  version.h  views.h
src/main/cpp/skizzay/cddd/dynamodb/: CMakeLists.txt  aws_sdk_raii.h  dynamodb_attribute_value.h  dynamodb_client.h  dynamodb_clock.h  dynamodb_deser.h  dynamodb_event_dispatcher.h  dynamodb_event_log_config.h  dynamodb_event_log_table.h  dynamodb_event_source.h  dynamodb_event_store.h  dynamodb_event_stream.h  dynamodb_event_stream_buffer.h  dynamodb_identifier.h  dynamodb_operation_failed_error.h  dynamodb_ttl.h  dynamodb_version_service.h  dynamodb_version_validation_error.h
src/main/cpp/skizzay/cddd/in_memory/: CMakeLists.txt  in_memory_event_buffer.h  in_memory_event_source.h  in_memory_event_store.h  (+1 more)
src/test/cpp/: CMakeLists.txt
src/test/cpp/skizzay/cddd/: concurrent_repository.t.cpp  dynamodb_client.t.cpp  dynamodb_event_dispatcher.t.cpp  dynamodb_event_source.t.cpp  dynamodb_event_store.t.cpp  dynamodb_event_stream.t.cpp  dynamodb_version_service.t.cpp  event_sourced_aggregate_repository.t.cpp  fakes.h  fakes.t.cpp  in_memory_event_buffer.t.cpp  in_memory_event_source.t.cpp  in_memory_event_store.t.cpp  in_memory_event_stream.t.cpp
test/: CMakeLists.txt  conanfile.py  main.cpp
tests/cqrs/: CMakeLists.txt  artifact_store_test.cpp  artifact_test.cpp  artifact_view_test.cpp  command_handler_test.cpp  domain_event_stream_store_test.cpp  domain_event_test.cpp  helpers.h  memento_store_test.cpp  stream_test.cpp
tests/features/: .command.feature.swo  CMakeLists.txt  artifact.feature  command.feature  main.cpp
tests/features/step_definitions/: artifact_steps.cpp  command_steps.cpp
(+47 files in other folders)
